# WeatherWebsite

backend/: main.py  pyproject.toml  server.py
backend/app/: main.py  schemas.py
backend/app/routes/: map.py
backend/tests/: conftest.py  test_main.py
